# ChangeLog for dev-vcs/pepper
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jul 2012; James Rowe <jnrowe@gmail.com> pepper-0.3.2.ebuild:
  Keyworded amd64.

*pepper-0.3.2 (15 Jun 2012)

  15 Jun 2012; James Rowe <jnrowe@gmail.com> +pepper-0.3.2.ebuild:
  Version bump [619].

  18 Apr 2012; James Rowe <jnrowe@gmail.com> -pepper-0.3.ebuild,
  pepper-0.3.1.ebuild:
  Keyworded x86.

  18 Apr 2012; James Rowe <jnrowe@gmail.com> pepper-0.3.1.ebuild:
  Keyworded amd64.

*pepper-0.3.1 (19 Mar 2012)

  19 Mar 2012; James Rowe <jnrowe@gmail.com> +pepper-0.3.1.ebuild:
  Version bump [574].

  18 Feb 2012; James Rowe <jnrowe@gmail.com> -pepper-0.2.4.ebuild,
  -files/pepper-0.2.4-honour_cflags.patch, pepper-0.3.ebuild:
  Keyworded x86.

  17 Feb 2012; James Rowe <jnrowe@gmail.com> pepper-0.3.ebuild:
  Keyworded amd64.

  22 Jan 2012; James Rowe <jnrowe@gmail.com> pepper-0.3.ebuild:
  Set USE=gnuplot by default, so we have a wide range of report types.

*pepper-0.3 (18 Jan 2012)

  18 Jan 2012; James Rowe <jnrowe@gmail.com> +pepper-0.3.ebuild:
  Version bump [523].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  17 Oct 2011; James Rowe <jnrowe@gmail.com>
  files/pepper-0.2.4-honour_cflags.patch:
  Added patch description.

  18 Sep 2011; James Rowe <jnrowe@gmail.com> -pepper-0.2.3.ebuild,
  -files/pepper-0.2.3-honour_cflags.patch, pepper-0.2.4.ebuild:
  Keyworded x86.

  17 Sep 2011; James Rowe <jnrowe@gmail.com> pepper-0.2.4.ebuild:
  Keyworded amd64.

  06 Sep 2011; James Rowe <jnrowe@gmail.com> pepper-0.2.3.ebuild,
  pepper-0.2.4.ebuild:
  Switched to EAPI 4.

*pepper-0.2.4 (18 Aug 2011)

  18 Aug 2011; James Rowe <jnrowe@gmail.com> +pepper-0.2.4.ebuild,
  +files/pepper-0.2.4-honour_cflags.patch:
  Version bump [448].

  01 Aug 2011; James Rowe <jnrowe@gmail.com> pepper-0.2.3.ebuild:
  Keyworded x86.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> pepper-0.2.3.ebuild:
  Keyworded amd64.
