@@ -1,2 +1,1 @@
-DIST pepper-0.3.1.tar.bz2 288949 RMD160 8a367bbf055a8c42af0d1e26a79c9ec13378ac76 SHA1 2d29d38a00e29df62fbb2200ddf2c925cd0fd12e SHA256 6d699fea9288c0429fc85748ef1661262f45b611596a2d25b0045f20d82895ff
 DIST pepper-0.3.2.tar.bz2 291956 RMD160 eeea07a21dff91ab65e79e7b5a424010aa47fb13 SHA1 d1cad88093e10ba903bdbf7253d1f555f70697bb SHA256 f5c8c97e853d9f76de0aa4e13d6f496d2dee70a3ce2c9513b11dec40be7b8572
