@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/scm-pepper/${P}.tar.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="doc git +gnuplot mercurial"
 
 RDEPEND="dev-lang/lua
