@@ -32,6 +32,5 @@
  * Licence: ``GPL-3``
  * Versions:
 
-  * `0.3.1 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-vcs/pepper/pepper-0.3.1.ebuild>`__  ``amd64``, ``x86``
-  * `0.3.2 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-vcs/pepper/pepper-0.3.2.ebuild>`__  ``amd64``, ``~x86`` (due 2012-07-15)
+  * `0.3.2 <https://github.com/JNRowe/jnrowe-misc/blob/master/dev-vcs/pepper/pepper-0.3.2.ebuild>`__  ``amd64``, ``x86``
 
