@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure
-DEPEND=dev-lang/lua git? ( dev-vcs/git ) gnuplot? ( sci-visualization/gnuplot ) mercurial? ( dev-vcs/mercurial ) doc? ( app-text/asciidoc app-text/xmlto )
-DESCRIPTION=Retrieve statistics and generate reports from source code repositories
-EAPI=4
-HOMEPAGE=http://scm-pepper.sourceforge.net/
-IUSE=doc git +gnuplot mercurial
-KEYWORDS=amd64 x86
-LICENSE=GPL-3
-RDEPEND=dev-lang/lua git? ( dev-vcs/git ) gnuplot? ( sci-visualization/gnuplot ) mercurial? ( dev-vcs/mercurial )
-RESTRICT=test
-SLOT=0
-SRC_URI=mirror://sourceforge/scm-pepper/pepper-0.3.1.tar.bz2
-_md5_=96374861b528415ec61a1a3353984b70
