@@ -4,10 +4,10 @@ DESCRIPTION=Retrieve statistics and generate reports from source code repositori
 EAPI=4
 HOMEPAGE=http://scm-pepper.sourceforge.net/
 IUSE=doc git +gnuplot mercurial
-KEYWORDS=amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=GPL-3
 RDEPEND=dev-lang/lua git? ( dev-vcs/git ) gnuplot? ( sci-visualization/gnuplot ) mercurial? ( dev-vcs/mercurial )
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://sourceforge/scm-pepper/pepper-0.3.2.tar.bz2
-_md5_=8fcc7f7beded900034b56248e1c2451e
+_md5_=96374861b528415ec61a1a3353984b70
