@@ -1,6 +1,5 @@
 REM 2012-07-15 *1 MSG %"Stabilise amd64 media-gfx/blockdiag-1.1.6%" %a
 REM 2012-07-15 *1 MSG %"Stabilise x86 media-gfx/blockdiag-1.1.6%" %a
-REM 2012-07-15 *1 MSG %"Stabilise x86 dev-vcs/pepper-0.3.2%" %a
 REM 2012-07-15 *1 MSG %"Stabilise x86 www-client/httpshell-0.8.0%" %a
 REM 2012-07-18 *1 MSG %"Stabilise amd64 dev-python/rstctl-0.4%" %a
 REM 2012-07-18 *1 MSG %"Stabilise amd64 dev-python/nose2-0.4.1%" %a
